@@ -3,204 +3,203 @@
   <groupId>cucumber-testng-bdd</groupId>
   <artifactId>cucumber-testng-bdd</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <properties>
+	  <maven.compiler.source>17</maven.compiler.source>
+	  <maven.compiler.target>17</maven.compiler.target>
+	  <suiteFile>testng.xml</suiteFile>
+  </properties>
+     <build>
+		 
+        <plugins>
+			
+           
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M1</version>
+                <configuration>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>testng.xml</suiteXmlFile>
+                    </suiteXmlFiles>
+                    <systemProperties>
+   <property>
+      <name>allure.results.directory</name>
+      <value>${project.build.directory}/allure-results</value>
+    </property>
+</systemProperties>
+                </configuration>
+            </plugin>
+             <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.8.1</version>
+            <configuration>
+                <source>1.8</source>
+                <target>1.8</target>
+                <fork>true</fork>
+                <!-- this is to fix bitbucket pipeline build error due to Lombok processing   dfd-->
+                <compilerArgs>
+                    <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+                    <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+                    <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+                    <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+                    <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+                    <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+                    <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                    <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+                    <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+                    <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg>
+                </compilerArgs>
+                <annotationProcessorPaths>
+                    <path>
+                        <groupId>org.projectlombok</groupId>
+                        <artifactId>lombok</artifactId>
+                        <version>1.18.30</version>
+                    </path>
+                </annotationProcessorPaths>
+            </configuration>
+        </plugin>
+        </plugins>
+    </build>
+  <dependencies>
+  
+        <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-testng -->
+<dependency>
+    <groupId>io.qameta.allure</groupId>
+    <artifactId>allure-testng</artifactId>
+    <version>2.25.0</version>
+</dependency>
 
-<build>
-	<plugins>
-		<plugin>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-compiler-plugin</artifactId>
-			<version>3.8.1</version>
-			<configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-             </configuration>
-		</plugin>
-		<plugin>
-			 <groupId>org.apache.maven.plugins</groupId>
-             <artifactId>maven-surefire-plugin</artifactId>
-             <version>3.2.5</version>
-             <configuration>
-             	<suiteXmlFiles>
-            		<suiteXmlFile>testng.xml</suiteXmlFile>
-               	</suiteXmlFiles>
-             </configuration>
-         </plugin>
-	</plugins>
-</build>
-<dependencies>
-	 <dependency>
-		<groupId>tech.grasshopper</groupId>	
-		<artifactId>extentreports-cucumber7-adapter</artifactId>	
-		<version>1.14.0</version>
-	</dependency>
-	
-	<dependency>
-		<groupId>org.seleniumhq.selenium</groupId>
-        <artifactId>selenium-java</artifactId>
-        <version>4.18.1</version>
-	</dependency>
-	
-	<!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
-	<dependency>
-		<groupId>io.github.bonigarcia</groupId>
-   		<artifactId>webdrivermanager</artifactId>
-    	<version>5.7.0</version>
-	</dependency>
-	
-	<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
+       <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+<dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <version>1.18.30</version>
+    <scope>provided</scope>
+</dependency>
+<!-- https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox -->
+<dependency>
+    <groupId>org.apache.pdfbox</groupId>
+    <artifactId>pdfbox</artifactId>
+    <version>2.0.24</version>
+</dependency>
 
-		<dependency>
-			<groupId>io.cucumber</groupId>
-			<artifactId>cucumber-java</artifactId>
-			<version>7.15.0</version>
-		</dependency>
-		
-	<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-picocontainer -->
 
-		<dependency>
-			<groupId>io.cucumber</groupId>
-			<artifactId>cucumber-picocontainer</artifactId>
-			<version>7.15.0</version>
-			<scope>test</scope>
-		</dependency>
-		
-	<!-- https://mvnrepository.com/artifact/io.cucumber/gherkin -->
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>4.18.1</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>5.7.0</version>
+        </dependency>
+        
+        <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
+<dependency>
+    <groupId>io.cucumber</groupId>
+    <artifactId>cucumber-java</artifactId>
+    <version>7.15.0</version>
+</dependency>
 
+<!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-cucumber7-jvm -->
+<dependency>
+    <groupId>io.qameta.allure</groupId>
+    <artifactId>allure-cucumber7-jvm</artifactId>
+    <version>2.25.0</version>
+</dependency>
+
+<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-junit -->
+<dependency>
+    <groupId>io.cucumber</groupId>
+    <artifactId>cucumber-junit</artifactId>
+    <version>7.15.0</version>
+    <scope>test</scope>
+</dependency>
+
+<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-picocontainer -->
+<dependency>
+    <groupId>io.cucumber</groupId>
+    <artifactId>cucumber-picocontainer</artifactId>
+    <version>7.15.0</version>
+</dependency>
+
+		<!-- https://mvnrepository.com/artifact/io.cucumber/gherkin -->
 		<dependency>
 			<groupId>io.cucumber</groupId>
 			<artifactId>gherkin</artifactId>
 			<version>28.0.0</version>
 		</dependency>
-
-	<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-jvm -->		
-
-		<dependency>
-			<groupId>tech.grasshopper</groupId>
-			<artifactId>extentreports-cucumber6-adapter</artifactId>
-			<version>2.18.0</version>
-			<scope>test</scope>
+		<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-jvm -->
+		
+		
+		<dependency>	
+			<groupId>tech.grasshopper</groupId>	
+			<artifactId>extentreports-cucumber7-adapter</artifactId>	
+			<version>1.14.0</version>
 		</dependency>
-
-	<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
-
+		<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
 		<dependency>
 			<groupId>com.aventstack</groupId>
 			<artifactId>extentreports</artifactId>
 			<version>5.1.1</version>
-		</dependency>	
-
-	<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
-
-		<dependency>
-			 <groupId>org.apache.poi</groupId>
-			 <artifactId>poi</artifactId>
-			 <version>5.2.5</version>
 		</dependency>
 	
-	<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+<dependency>
+  <groupId>org.apache.poi</groupId>
+  <artifactId>poi</artifactId>
+  <version>5.2.5</version>
+</dependency>
 
-		<dependency>
-			<groupId>org.apache.poi</groupId>
-			<artifactId>poi-ooxml</artifactId>
-			<version>5.2.5</version>
-		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-testng -->
+<dependency>
+    <groupId>io.cucumber</groupId>
+    <artifactId>cucumber-testng</artifactId>
+    <version>7.15.0</version>
+</dependency>
+
+ 
+    <dependency>
+        <groupId>org.apache.poi</groupId>
+        <artifactId>poi-ooxml</artifactId>
+        <version>5.2.5</version>
+    </dependency>
+    <dependency>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>2.15.1</version>
+    </dependency>
 	
-	<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-testng -->
-
-		<dependency>
-			<groupId>io.cucumber</groupId>
-			<artifactId>cucumber-testng</artifactId>
-			<version>7.15.0</version>
-		</dependency>
-
-	<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-junit -->
-
-		<dependency>
-			<groupId>io.cucumber</groupId>
-			<artifactId>cucumber-junit</artifactId>
-			<version>7.15.0</version>
-			<scope>test</scope>
-		</dependency>
-
-	<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-core -->
-
-		<dependency>
-			<groupId>io.cucumber</groupId>
-			<artifactId>cucumber-core</artifactId>
-			<version>7.15.0</version>
-		</dependency>
-
-	<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
-
-		<dependency>
-			<groupId>commons-io</groupId>
-			<artifactId>commons-io</artifactId>
-			<version>2.15.1</version>
-		</dependency>
-
-	<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-jvm -->
-
-		<dependency>
-			<groupId>io.cucumber</groupId>
-			<artifactId>cucumber-jvm</artifactId>
-			<version>7.15.0</version>
-			<type>pom</type>
-		</dependency>
-
-	<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
-
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>2.0.12</version>
-		</dependency>
-
-	<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
-
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-simple</artifactId>
-			<version>2.0.12</version>
-			<scope>test</scope>
-		</dependency>
-
-	<!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-cucumber7-jvm -->
-
-		<dependency>
-			<groupId>io.qameta.allure</groupId>
-			<artifactId>allure-cucumber7-jvm</artifactId>
-			<version>2.25.0</version>
-		</dependency>
-
-	<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
-
-		<dependency>
-		    <groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-core</artifactId>
-			<version>2.23.0</version>
-		</dependency>
-
-	<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
 		
-		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-api</artifactId>
-			<version>2.23.0</version>
-		</dependency>
-		
-		 <dependency>
-           <groupId>io.qameta.allure</groupId>
-			<artifactId>allure-testng</artifactId>
-			<version>2.20.1</version>
-		</dependency>
-		
-	<!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-cucumber7-jvm -->
-		<dependency>
-    		<groupId>io.qameta.allure</groupId>
-    		<artifactId>allure-cucumber7-jvm</artifactId>
-   			<version>2.25.0</version>
-		</dependency>
+<dependency>
+    <groupId>org.slf4j</groupId>
+    <artifactId>slf4j-api</artifactId>
+    <version>2.0.12</version>
+</dependency>
 
-			
-</dependencies>
+
+<dependency>
+    <groupId>org.slf4j</groupId>
+    <artifactId>slf4j-simple</artifactId>
+    <version>2.0.12</version>
+    <scope>test</scope>
+</dependency>
+	
+  <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+<dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-core</artifactId>
+    <version>2.23.0</version>
+</dependency>
+<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
+<dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-api</artifactId>
+    <version>2.23.0</version>
+</dependency>
+
+
+
+ </dependencies>
 </project>
